<resources>
    <string name="app_name">Quote-on-Quote</string>
    <string name="play">PLAY</string>
    <string name="answer0">answer0</string>
    <string name="answer1">answer1</string>
    <string name="answer2">answer2</string>
    <string name="answer3">answer3</string>
    <string name="quote_on_quote">Quote-on-Quote</string>
    <string name="questionimage">questionimage</string>
    <string name="trivia_about_your_favorite_false_quotes_misquotes_and_mis_attributed_quotes">Trivia about your favorite false quotes, misquotes, and mis-attributed quotes!</string>
    <string name="openingpageimage">openingpageimage</string>
    <string name="more_info">More info</string>
    <string name="next_question">Next Question</string>
    <string name="submit">Submit</string>
    <string name="alert_message_pic">alert message pic</string>
    <string name="leave">Button</string>
    <string name="playagain">Button</string>
    <string name="game_over">Game Over!</string>
    <string name="dialog_logo">dialog logo</string>
    <string name="game_over_message">game over message</string>
    <string name="exit_game">Exit Game</string>
    <string name="play_again">Play Again</string>
    <string name="game_over_image">game over image</string>
    <string name="gomessage">TextView</string>
    <string name="win_lose_image">win lose image</string>
</resources>